added bg-img, added header, minor changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
 
 </head>
 
-<body>
+<body onload="init()">
+
+    <header class="d-flex justify-content-around">
+        <img src="./img/pokemon-logo.svg" alt="">
+        <h1 class="align-middle">Pokédex</h1>
+        <form class="d-flex align-items-center">
+            <input class="" type="search" placeholder="Search for Pokémon...">
+        </form>
+    </header>
+    <img class="bg-img" src="./img/pokeball.svg" alt="">
+    <main></main>
 
 </body>
 
