--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <script src="script.js"></script>
     <script src="templates.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-
 </head>
 
 <body onload="init()">
@@ -21,12 +19,11 @@
     <header class="header d-flex justify-content-around">
         <img class="logo" src="./img/pokedex_logo.svg" alt="">
         <!-- <h1 class="d-flex align-items-center">Pokédex</h1> -->
-        <form class="d-flex align-items-center" ; return false;>
-            <div class="search">
-                <input class="" type="search" placeholder="Search for Pokémon...">
-                <button type="submit" class="search-btn">
-                    <svg class="search-icon" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" viewBox="0 0 500.00001 500.00001" id="svg4162" version="1.1" inkscape:version="0.92.3 (2405546, 2018-03-11)"
-                        sodipodi:docname="Search_Icon.svg">
+        <div class="search">
+            <form class="d-flex align-items-center" ; onsubmit="return false" ;>
+                <input class="" id="pokemonSearch" type="search" placeholder="Search for Pokémon..." oninput="searchPokemon()">
+                <svg class="search-icon" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" viewBox="0 0 500.00001 500.00001" id="svg4162" version="1.1" inkscape:version="0.92.3 (2405546, 2018-03-11)"
+                    sodipodi:docname="Search_Icon.svg">
                         <defs id="defs4164"/>
                         <g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1" transform="translate(0,-552.36216)">
                         <g id="g1400" transform="translate(-4.3609793,-7.6704785)">
@@ -35,16 +32,15 @@
                         </g>
                         </g>
                     </svg>
-                </button>
-            </div>
-        </form>
+            </form>
+        </div>
     </header>
     <img class="bg-img" src="./img/pokeball.svg" alt="">
 
     <main class="container" id="display">
     </main>
 
-    <div class="to-top-btn-wrapper" id="ToTopBtn" onclick="scrollToTop()">
+    <div class="to-top-btn-wrapper d-none" id="ToTopBtn" onclick="scrollToTop()">
         <img src="./img/top-arrow.svg" alt="">
     </div>
 </body>
