updated search function to display pokemon in correct order when search emptied

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- <h1 class="d-flex align-items-center">Pokédex</h1> -->
         <div class="search">
             <form class="d-flex align-items-center" ; onsubmit="return false" ;>
-                <input class="" id="pokemonSearch" type="search" placeholder="Search for Pokémon..." oninput="searchPokemon()">
+                <input autocomplete="off" id="pokemonSearch" type="search" placeholder="Search for Pokémon..." oninput="searchPokemon()">
                 <svg class="search-icon" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" viewBox="0 0 500.00001 500.00001" id="svg4162" version="1.1" inkscape:version="0.92.3 (2405546, 2018-03-11)"
                     sodipodi:docname="Search_Icon.svg">
                         <defs id="defs4164"/>
