--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="script.js"></script>
     <script src="templates.js"></script>
+    <script src="cardDetails.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 
@@ -39,6 +40,8 @@
 
     <main class="container" id="display">
     </main>
+
+    <div></div>
 
     <div class="to-top-btn-wrapper d-none" id="ToTopBtn" onclick="scrollToTop()">
         <img src="./img/top-arrow.svg" alt="">
